[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/babuszka.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/NPC.gd" type="Script" id=2]
[ext_resource path="res://src/Themes/basic_theme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 176.404, 447.594 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 219.822, 452.145 )

[node name="NPC" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 8
script = ExtResource( 2 )

[node name="kaltka0000" type="Sprite" parent="."]
position = Vector2( -9.37568, -485.961 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.55103, -452.591 )
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
visible = false
position = Vector2( 2, -461.254 )
shape = SubResource( 2 )

[node name="InteractionHint" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.2348
margin_top = -1066.16
margin_right = 82.7652
margin_bottom = -1028.16
theme = ExtResource( 3 )
text = "Press E to interract"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
